--- a/requirements.txt
+++ b/requirements.txt
@@ -7,4 +7,4 @@ slacker
 stripe
 psycopg2
 raven[flask]
--e git://github.com/spacewiki/spacewiki@master#egg=spacewiki
+-e git://github.com/spacewiki/spacewiki@9ae7430#egg=spacewiki
