--- a/ansible/files/spacewiki-io.service
+++ b/ansible/files/spacewiki-io.service
@@ -5,7 +5,7 @@ Name=spcewiki.io
 User=spacewiki
 Group=spacewiki
 WorkingDirectory=/srv/spacewiki/io-app/
-ExecStart=/srv/spacewiki/virtualenv/bin/gunicorn spacewiki_io
+ExecStart=/srv/spacewiki/virtualenv/bin/gunicorn spacewiki_io.wsgi
 Requires=postgresql.service
 After=postgresql.service
 Before=nginx.service
