--- a/requirements.txt
+++ b/requirements.txt
@@ -8,4 +8,4 @@ stripe
 psycopg2
 raven[flask]
 flask-testing
-git://github.com/spacewiki/spacewiki@4161736#egg=spacewiki
+git+https://github.com/spacewiki/spacewiki@4161736#egg=spacewiki
